--- a/nuha.cabal
+++ b/nuha.cabal
@@ -1,5 +1,5 @@
 name:                nuha
-version:             0.1.0.0
+version:             0.2.0.0
 license:             BSD3
 license-file:        LICENSE
 author:              Johannes Kropp
@@ -9,7 +9,22 @@ cabal-version:       >= 1.10
 build-type:          Simple
 category:            Math, Numeric
 synopsis:            Multidimensional arrays, Linear algebra
-description:         A library for linear algebra based on multidimensional arrays
+description:
+    .
+    Nuha is a library for linear algebra based on multidimensional arrays (holors).
+    .
+    The goals of Nuha are:
+    .
+    * to be user friendly
+    .
+    * to be lightweight with few dependencies
+    .
+    * to be fast (although there haven't been many benchmarks yet)
+    .
+    If there's time in the future, it is planned to implement algorithms of numerical analysis, e.g. solve linear systems, determinant, inverse, svd, eigenvalues, matrix decompositions ...
+    .
+    -- Please visit also my <https://github.com/jdkr/nuha github-repository> for further information on this project.
+
 
 extra-source-files:
     CHANGELOG.md
@@ -24,7 +39,6 @@ library
     exposed-modules:
         Math.Nuha
         Math.Nuha.Types
-        Math.Nuha.Instances
         Math.Nuha.Base
         Math.Nuha.Numeric
         Math.Nuha.Algorithms
@@ -38,7 +52,7 @@ library
 test-suite nuha-test
     default-language:    Haskell2010
     type: exitcode-stdio-1.0
-    main-is: Spec.hs
+    main-is: Main.hs
     other-modules:
         Math.NuhaTest
     hs-source-dirs:
