--- a/nuha.cabal
+++ b/nuha.cabal
@@ -1,5 +1,5 @@
 name:                nuha
-version:             0.2.0.0
+version:             0.3.0.0
 license:             BSD3
 license-file:        LICENSE
 author:              Johannes Kropp
@@ -8,10 +8,10 @@ copyright:           (c) Johannes Kropp 2020
 cabal-version:       >= 1.10
 build-type:          Simple
 category:            Math, Numeric
-synopsis:            Multidimensional arrays, Linear algebra
+synopsis:            Multidimensional arrays, Linear algebra, Numerical analysis
 description:
     .
-    Nuha is a library for linear algebra based on multidimensional arrays (holors).
+    Nuha is a library for numerical linear algebra based on multidimensional arrays (holors).
     .
     The goals of Nuha are:
     .
@@ -21,10 +21,6 @@ description:
     .
     * to be fast (although there haven't been many benchmarks yet)
     .
-    If there's time in the future, it is planned to implement algorithms of numerical analysis, e.g. solve linear systems, determinant, inverse, svd, eigenvalues, matrix decompositions ...
-    .
-    -- Please visit also my <https://github.com/jdkr/nuha github-repository> for further information on this project.
-
 
 extra-source-files:
     CHANGELOG.md
@@ -46,10 +42,10 @@ library
     hs-source-dirs:
         src
     build-depends:
-        base        >= 4.13.0 && < 4.14
+        base        >= 4.13.0 && < 5
        ,vector      >= 0.12.1 && < 0.13
 
-test-suite nuha-test
+test-suite nuhaTest
     default-language:    Haskell2010
     type: exitcode-stdio-1.0
     main-is: Main.hs
